<resources>
    <string name="app_name">My Workout</string>
    <string name="add_workout">Add Workout</string>
    <string name="save_and_exit">Save List Items and Exit</string>
    <string name="sets">Sets</string>
    <string name="repitions">Repitions</string>
    <string name="exercise">Exercise</string>
    <string name="add_exercise_to_list">Add Exercise to List</string>
    <string name="change_date">Change Date</string>
    <string name="display_data">Display Data</string>
    <string name="year">Year</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="weight">Weight</string>
    <string name="display_by_exercise">Display By Exercise</string>
    <string name="intentExer">Exercise</string>
    <string name="generate_data">Generate Data</string>
    <string name="graph_max_lifts">Graph Max Lifts</string>
</resources>
